# elf-parser

./: CMakeLists.txt  README.md
ExampleElf64Parser/: main.c
include/parser/: elf.h
src/: elfparser.c
